[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/ingame/options/ScreenPaused.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/MonsterFriendFore - Opstions.otf" type="DynamicFontData" id=2]
[ext_resource path="res://src/ingame/options/Particles2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/utils/zero.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=14]
outline_size = 1
extra_spacing_space = 8

[sub_resource type="Theme" id=15]
default_font = SubResource( 14 )

[sub_resource type="DynamicFont" id=4]
size = 14
extra_spacing_top = 12
extra_spacing_bottom = 8
extra_spacing_char = 3
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=11]
default_font = SubResource( 4 )

[sub_resource type="Theme" id=20]

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.0745098, 0.0392157, 0.0392157, 0 )

[sub_resource type="Theme" id=17]

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Control" type="Control"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -102.0
margin_right = 699.0
margin_bottom = 445.0
rect_scale = Vector2( 1.23582, 1.34327 )
color = Color( 0.188235, 0.141176, 0.454902, 0.278431 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = -0.02
anchor_top = -0.002
anchor_right = 0.926
anchor_bottom = 0.984
margin_left = 324.02
margin_top = 122.204
margin_right = -118.98
margin_bottom = -204.796
rect_scale = Vector2( 0.987166, 0.950298 )
theme = SubResource( 15 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
process_priority = 1
modulate = Color( 0.992157, 0.984314, 0.984314, 1 )
margin_right = 160.0
margin_bottom = 189.0
focus_neighbour_top = NodePath("BtnStop")
size_flags_stretch_ratio = 0.0
theme = SubResource( 11 )
custom_constants/separation = 7
alignment = 1

[node name="Paused" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 160.0
margin_bottom = 73.0
focus_neighbour_bottom = NodePath("../BtnResume")
text = "Pausado
"
align = 1
valign = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 160.0
margin_bottom = 93.0
rect_min_size = Vector2( 0, 13 )

[node name="BtnResume" type="Button" parent="CenterContainer/VBoxContainer"]
self_modulate = Color( 0.976471, 0.976471, 0.976471, 1 )
margin_top = 100.0
margin_right = 160.0
margin_bottom = 141.0
focus_neighbour_top = NodePath("../BtnStop")
focus_neighbour_bottom = NodePath("../BtnStop")
focus_mode = 1
theme = SubResource( 20 )
custom_colors/font_color_focus = Color( 0.27451, 0.752941, 0.203922, 1 )
custom_colors/font_color = Color( 0.992188, 0.983467, 0.983467, 1 )
custom_styles/focus = SubResource( 18 )
action_mode = 0
enabled_focus_mode = 1
text = "Continuar"
flat = true
icon_align = 1

[node name="BtnStop" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 160.0
margin_bottom = 189.0
focus_neighbour_top = NodePath("../BtnResume")
focus_neighbour_bottom = NodePath("../BtnResume")
focus_mode = 1
theme = SubResource( 17 )
custom_colors/font_color_focus = Color( 0.835294, 0.305882, 0.788235, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/focus = SubResource( 19 )
action_mode = 0
enabled_focus_mode = 1
text = "Sair"
flat = true
icon_align = 1

[node name="Particles2D" parent="." instance=ExtResource( 3 )]
position = Vector2( -5, -87 )

[node name="zero" parent="." instance=ExtResource( 4 )]

[connection signal="focus_entered" from="CenterContainer/VBoxContainer/BtnResume" to="." method="_on_BtnResume_focus_entered"]
[connection signal="focus_exited" from="CenterContainer/VBoxContainer/BtnResume" to="." method="_on_BtnResume_focus_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BtnResume" to="." method="_on_BtnResume_pressed"]
[connection signal="focus_entered" from="CenterContainer/VBoxContainer/BtnStop" to="." method="_on_BtnStop_focus_entered"]
[connection signal="focus_exited" from="CenterContainer/VBoxContainer/BtnStop" to="." method="_on_BtnStop_focus_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BtnStop" to="." method="_on_BtnStop_pressed"]
